OPTION(COMPILE_DTITRACTSTAT "Compile dtitractstat." ON)
IF(COMPILE_DTITRACTSTAT)
  add_subdirectory( dtitractstat )
ENDIF(COMPILE_DTITRACTSTAT)


OPTION(COMPILE_DTIATLASFIBERANALYZER "Compile DTIAtlasFiberAnalyzer." ON)
IF(COMPILE_DTIATLASFIBERANALYZER)
  add_subdirectory( DTIAtlasFiberAnalyzer )
ENDIF(COMPILE_DTIATLASFIBERANALYZER)

OPTION(COMPILE_MERGERSTATWITHFIBER "Compile MergeStatWithFiber." ON)
IF(COMPILE_MERGERSTATWITHFIBER)
  add_subdirectory( MergeStatWithFiber )
ENDIF(COMPILE_MERGERSTATWITHFIBER)

OPTION(COMPILE_FIBERPOSTPROCESS "Compile FiberPostProcess." ON)
IF(COMPILE_FIBERPOSTPROCESS)
  add_subdirectory( FiberPostProcess )
ENDIF(COMPILE_FIBERPOSTPROCESS)

OPTION(COMPILE_EXTERNAL_DTIPROCESS "Compile external DTIProcess package (for fiberprocess application)." ON)
IF(COMPILE_EXTERNAL_DTIPROCESS)
  if( EXTENSION )
    set(DTIProcessVarExt 
        -DDTIProcess_BUILD_SLICER_EXTENSION:BOOL=ON
        -DSlicer_DIR:PATH=${Slicer_DIR}
        -DSubversion_SVN_EXECUTABLE:FILEPATH=${Subversion_SVN_EXECUTABLE}
        -DGIT_EXECUTABLE:FILEPATH=${GIT_EXECUTABLE}
        -DUSE_GIT_PROTOCOL:BOOL=${USE_GIT_PROTOCOL}
       )
  endif()
  set(proj DTIProcess)
  set( ${proj}_REPOSITORY ${git_protocol}://github.com/NIRALUser/DTIProcessToolkit.git)
  set( ${proj}_GIT_TAG 9680fd40cfd762f125894a4be30d9ff065330844 )
  ExternalProject_Add(${proj}
    GIT_REPOSITORY ${${proj}_REPOSITORY}
    GIT_TAG ${${proj}_GIT_TAG}
    SOURCE_DIR ${proj}
    BINARY_DIR ${proj}-build
    DEPENDS ${ITK_DEPEND} ${VTK_DEPEND} ${SlicerExecutionModel_DEPEND}
    CMAKE_GENERATOR ${gen}
    CMAKE_ARGS
      -DBUILD_dwiAtlas:BOOL=OFF
      -DBUILD_TESTING:BOOL=OFF
      ${CMAKE_OSX_EXTERNAL_PROJECT_ARGS}
      ${COMMON_EXTERNAL_PROJECT_ARGS}
      -DEXECUTABLES_ONLY:BOOL=${EXECUTABLES_ONLY}
      -DDTIProcess_SUPERBUILD:BOOL=FALSE
      -DITK_DIR:PATH=${ITK_DIR}
      -DVTK_DIR:PATH=${VTK_DIR}
      -DVTK_VERSION_MAJOR:STRING=${VTK_VERSION_MAJOR}
      -DSlicerExecutionModel_DIR:PATH=${SlicerExecutionModel_DIR}
      -DBUILD_PolyDataTransform:BOOL=FALSE
      -DBUILD_PolyDataMerge:BOOL=FALSE
      -DBUILD_CropDTI:BOOL=FALSE
      ${DTIProcessVarExt}
      -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}
      -DINSTALL_RUNTIME_DESTINATION:STRING=${install_dir}
      -DINSTALL_LIBRARY_DESTINATION:STRING=${install_dir}
  )
ENDIF(COMPILE_EXTERNAL_DTIPROCESS)

OPTION(COMPILE_FIBERCOMPARE " Compile FiberCompare." OFF)
IF(COMPILE_FIBERCOMPARE)
  add_subdirectory( FiberCompare )
ENDIF(COMPILE_FIBERCOMPARE)
