OPTION(COMPILE_DTITRACTSTAT "Compile dtitractstat." ON)
IF(COMPILE_DTITRACTSTAT)
  add_subdirectory( dtitractstat )
ENDIF(COMPILE_DTITRACTSTAT)


OPTION(COMPILE_DTIATLASFIBERANALYZER "Compile DTIAtlasFiberAnalyzer." ON)
IF(COMPILE_DTIATLASFIBERANALYZER)
  add_subdirectory( DTIAtlasFiberAnalyzer )
ENDIF(COMPILE_DTIATLASFIBERANALYZER)

OPTION(COMPILE_MERGERSTATWITHFIBER "Compile MergeStatWithFiber." ON)
IF(COMPILE_MERGERSTATWITHFIBER)
  add_subdirectory( MergeStatWithFiber )
ENDIF(COMPILE_MERGERSTATWITHFIBER)

OPTION(COMPILE_FIBERPOSTPROCESS "Compile FiberPostProcess." ON)
IF(COMPILE_FIBERPOSTPROCESS)
  add_subdirectory( FiberPostProcess )
ENDIF(COMPILE_FIBERPOSTPROCESS)

OPTION(COMPILE_FIBERCOMPARE " Compile FiberCompare." ON)
IF(COMPILE_FIBERCOMPARE)
  add_subdirectory( FiberCompare )
ENDIF(COMPILE_FIBERCOMPARE)

IF(BUILD_TESTING)
  ADD_SUBDIRECTORY(Testing)
ENDIF(BUILD_TESTING)
