CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(FiberCompare)

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
	INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
	MESSAGE(FATAL_ERROR "ITK not found. Please set ITK_DIR")
ENDIF(ITK_FOUND)

FIND_PACKAGE(VTK REQUIRED)
IF (VTK_FOUND)
  INCLUDE(${VTK_USE_FILE})
ELSE(VTK_FOUND)
   MESSAGE(FATAL_ERROR, "VTK not found. Please set VTK_DIR.")
ENDIF (VTK_FOUND)

find_package(SlicerExecutionModel REQUIRED)
include(${SlicerExecutionModel_USE_FILE})

SEMMacroBuildCLI(
    NAME FiberCompare
    TARGET_LIBRARIES ${ITK_LIBRARIES} vtkIO
    EXECUTABLE_ONLY
    INCLUDE_DIRECTORIES ${FiberCompare_BINARY_DIR} ${FiberCompare_SOURCE_DIR}  ${VTK_INCLUDE_DIRS}
    )
