# This is the root ITK CMakeList file:
cmake_minimum_required(VERSION 2.8)


include(ExternalData)
set(CXX_FILES
processing.cxx
utils.cxx
csv.cxx
)

set(H_FILES
processing.h
utils.h
csv.h
)

SEMMacroBuildCLI(
  NAME FiberPostProcess
  EXECUTABLE_ONLY
  ADDITIONAL_SRCS ${CXX_FILES} ${H_FILES}
  TARGET_LIBRARIES ${ITK_LIBRARIES} ${VTK_LIBRARIES}
  LINK_DIRECTORIES ${ITK_LIBRARY_DIRS} ${VTK_LIBRARY_DIRS}
  INCLUDE_DIRECTORIES ${ITK_INCLUDE_DIR} ${VTK_INCLUDE_DIR}
  ARCHIVE_OUTPUT_DIRECTORY ${ARCHIVE_DESTINATION}
  LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_DESTINATION}
  RUNTIME_OUTPUT_DIRECTORY ${RUNTIME_DESTINATION}
  INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}
  INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
  INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
  )
IF(BUILD_TESTING)
  ADD_SUBDIRECTORY(Testing)
ENDIF(BUILD_TESTING)
