Project(MergeStatWithFiber)
set(LOCAL_PROJECT_NAME dtiparametrization)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(VTK REQUIRED)
IF (VTK_FOUND)
  INCLUDE(${VTK_USE_FILE})
ELSE(VTK_FOUND)
   MESSAGE(FATAL_ERROR, "VTK not found. Please set VTK_DIR.")
ENDIF (VTK_FOUND)

find_package(SlicerExecutionModel REQUIRED)
include(${SlicerExecutionModel_USE_FILE})


SEMMacroBuildCLI(
    NAME MergeStatWithFiber
    ADDITIONAL_SRCS processing.cxx processing.h
    TARGET_LIBRARIES vtkHybrid
    ${STATIC}
    INCLUDE_DIRECTORIES ${MergeStatWithFiber_BINARY_DIR} ${MergeStatWithFiber_SOURCE_DIR}  ${VTK_INCLUDE_DIRS}
    INSTALL_ARCHIVE_DESTINATION ${ARCHIVE_DESTINATION}
    INSTALL_RUNTIME_DESTINATION ${RUNTIME_DESTINATION}
    INSTALL_LIBRARY__DESTINATION ${LIBRARY_DESTINATION}
    )
