
SEMMacroBuildCLI(
    NAME MergeStatWithFiber
    ADDITIONAL_SRCS processing.cxx processing.h
    TARGET_LIBRARIES ${VTK_LIBRARIES}
    ${STATIC}
    INCLUDE_DIRECTORIES ${MergeStatWithFiber_SOURCE_DIR}
    ARCHIVE_OUTPUT_DIRECTORY ${ARCHIVE_DESTINATION}
    LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_DESTINATION}
    RUNTIME_OUTPUT_DIRECTORY ${RUNTIME_DESTINATION}
    )

IF(BUILD_TESTING)
  ADD_SUBDIRECTORY(Testing)
ENDIF(BUILD_TESTING)
