PROJECT(DTIFiberTractStat)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
MESSAGE(FATAL_ERROR
"ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)

FIND_PACKAGE(VTK)
IF(VTK_FOUND)
  INCLUDE(${VTK_USE_FILE})
ELSE(VTK_FOUND)
  MESSAGE(FATAL_ERROR
  "VTK not found.  Please set VTK_DIR.")
ENDIF(VTK_FOUND)

find_package(SlicerExecutionModel REQUIRED)
include(${SlicerExecutionModel_USE_FILE})

SET(CXX_FILES
dtitractstat.cxx
fiberprocessing.cxx
regression.cxx
)

SET(H_FILES
dtitypes.h
argio.h
fiberprocessing.h
regression.h
)

SEMMacroBuildCLI(
    NAME dtitractstat
    ADDITIONAL_SRCS ${CXX_FILES} ${H_FILES}
    TARGET_LIBRARIES ${ITK_LIBRARIES} vtkIO
    EXECUTABLE_ONLY
    INCLUDE_DIRECTORIES ${DTIFiberTractStat_BINARY_DIR} ${DTIFiberTractStat_SOURCE_DIR}  ${VTK_INCLUDE_DIRS}
    INSTALL_ARCHIVE_DESTINATION ${ARCHIVE_DESTINATION}
    )

