
SET(CXX_FILES
dtitractstat.cxx
fiberprocessing.cxx
regression.cxx
)

SET(H_FILES
dtitypes.h
argio.h
fiberprocessing.h
regression.h
)

SEMMacroBuildCLI(
    NAME dtitractstat
    ADDITIONAL_SRCS ${CXX_FILES} ${H_FILES}
    TARGET_LIBRARIES ${ITK_LIBRARIES} ${VTK_LIBRARIES}
    ${STATIC}
    INCLUDE_DIRECTORIES ${DTIFiberTractStat_SOURCE_DIR}
    ARCHIVE_OUTPUT_DIRECTORY ${ARCHIVE_DESTINATION}
    LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_DESTINATION}
    RUNTIME_OUTPUT_DIRECTORY ${RUNTIME_DESTINATION}
    INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}
    INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
    INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
    )

IF(BUILD_TESTING)
  ADD_SUBDIRECTORY(Testing)
ENDIF(BUILD_TESTING)
